Prevent images from jumping around during load

--- a/src/templates/layouts/styles.css
+++ b/src/templates/layouts/styles.css
@@ -109,15 +109,24 @@ h1 {
     text-decoration: auto;
 }
 
-.detail-image {
+.detail-image-wrapper {
+    position: relative;
+    height: 0;
     width: 100%;
     margin: 1rem 0;
 }
 
-.detail-image:first-child {
-    width: 100%;
-    margin: 1rem 0;
+.detail-image-wrapper:first-child {
     margin-top: 0;
+
+}
+
+.detail-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    max-width: 100%;
+    height: auto;
 }
 
 @media only screen and (min-width: 768px) {
@@ -189,5 +198,7 @@ h1 {
 
     .overlay-content {
         margin: 1.5rem;
+        /* something is wrong here. 100% - 2 * overlay-content margin */
+        width: calc(100% - 3rem);
     }
 }
